# WikidataMCP

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  mcp-config.json  pyproject.toml
.github/workflows/: lint.yml
wikidataMCP/: __init__.py  logger.py  tools.py  utils.py
