[project]
name = "wikidatamcp"
version = "0.1.0"
description = "An MCP server for Wikidata"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "fastmcp>=2.9.2",
    "gunicorn>=25.1.0",
    "jinja2>=3.1.6",
    "markdown2>=2.5.4",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "slowapi>=0.1.9",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0"
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes (catches undefined names, unused imports, etc.)
    "I",   # isort (import sorting)
    "D",   # pydocstring (function/class documentation)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = [
    "wikidatasearch"
]