[project]
name = "wikidatamcp"
version = "0.1.0"
description = "An MCP server for Wikidata"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "fastmcp>=2.9.2",
    "gunicorn>=25.1.0",
    "jinja2>=3.1.6",
    "markdown2>=2.5.4",
    "pandas>=2.3.0",
    "pymysql>=1.1.2",
    "requests>=2.32.4",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250611",
]
